--- a/app/views/pstaffs/_form1.html.erb
+++ b/app/views/pstaffs/_form1.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
  <div class ="jubotron text-center" >
-      <h1 class="display-7">temprary Staff</h1>
+      <h1 class="display-7">Temprary Staff</h1>
  </div>
  <div class="container_fluid" ">
   <div class="row" >
@@ -20,7 +20,7 @@
  <div class="col-sm-4" >
   <div class="shadow-lg p-3 mb-5 bg-black rounded">
   <div class="field" >
-    <h5><%= form.text_field :name %></h5>
+    <h5><%= form.text_field :name  ,require:true%></h5>
   </div>
 
 
@@ -28,21 +28,39 @@
     <h5><%= form.text_field :gender %></h5>
   </div>
 
+    <div class="field">  
+    <p>if you dont have emp_id then aadhar number.</p> 
+    <h5><%= form.text_field :unique_id %></h5>
+    </div>
+  
+
+  <div class="field">
+    <h5><%= form.text_field :vichel_no %></h5>
+  </div>
+
+
+ <div class="field">
+  <h5><%= form.text_field :vehical_type %></h5>
+  </div>
+   
+   <div class="field">
+  <h5><%= form.text_field :vehical_model %></h5>
+  </div>
+
+
   <div class="field">
    <h5><%= form.text_field :mobile_no %></h5>
   </div>
 
-  <div class="field">
-    <h5><%= form.text_field :department %></h5>
+  <div class="dropdown">
+    <h5><%= form.select :department, Pstaff::TEMP  %></h5>
   </div>
 
   <div class="field">
    <h5><%= form.text_field :address %></h5>
   </div>
 
-  <div class="field">
-  <h5><%= form.text_field :vehical_type %></h5>
-  </div>
+  
 
   <div class="field">
   <h5><%= form.file_field :registration_certificate %></h5>
@@ -51,6 +69,13 @@
   <div class="field">
    <h5><%= form.file_field :aadhaar_card %></h5>
   </div>
+
+  <div class="field">
+   <p> if registration certificate note on the name of the applicant then fill the name on the RC  and relationship between the applicant and RC holder </p>
+  <h5><%= form.text_field :RC_holder_name %></h5>
+  <h5><%= form.text_field :relationship %></h5>
+  </div>
+
 
   <div class="actions">
     <%= form.submit "Submit", class:"btn btn-primary" %>
