--- a/app/views/pstaffs/edit.html.erb
+++ b/app/views/pstaffs/edit.html.erb
@@ -1,8 +1,19 @@
 <div class="row">
-<h1>Editing Pstaff</h1>
+<h1>Editing</h1>
 </div>
 
-<%= render 'form', pstaff: @pstaff %>
+<% if @pstaff.type_applicant == "pstaff" %>
+        <%= render 'form', pstaff: @pstaff %>
+ <% elsif @pstaff.type_applicant == "tstaff" %>
+ 		 <%= render 'form1', pstaff: @pstaff %>
+ <% elsif @pstaff.type_applicant == "student" %>
+        <%= render 'phd_form', pstaff: @pstaff %>
+ <% elsif @pstaff.type_applicant == "others" %>
+        <%= render 'othres_form', pstaff: @pstaff %>
+<% end %>
+
+
+
 <div class="row">
 	<h1 class="align-left">
 <%= link_to 'Show', @pstaff ,class:"btn btn-primary align-right" %> </h1>
