--- a/app/views/check/phase3.html.erb
+++ b/app/views/check/phase3.html.erb
@@ -1,11 +1,71 @@
-<p>  <% @phases.each do |phase| %>
+<p id="notice"><%= notice %></p>
+<%=@user%>
 
-    <%= phase.phase1 %>
-    <%= link_to "approve", approve_path(phase), method: :post %>
+<p> <h1>Unapproved application</h1> count = <%= @phases.where(:phase3 => false).count %></p>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>EMP_ID</th>
+      <th>Mobile no</th>
+      <th>Vichel_no</th>
+      <th>Vichel_type</th>
+      <th>Vehical type</th>
+      </tr>
+  </thead>
+<tbody>
+<% @phases.each do |phase| %>
+   <tr>
+   <% if phase.phase3 == false && phase.phase2 == true %>
+        <td><%= phase.name %></td>
+        <td><%= phase.unique_id %></td>
+        <td><%= phase.mobile_no %></td>
+        <td><%= phase.vichel_no %></td>
+        <td><%= phase.vehical_type %></td>
+        <!-- <td><%= link_to 'Show', phase %></td> -->
+        <td><%= link_to "approve", approve_path(phase), method: :post %></td>
+   <% end %>
+    </tr>
+    </tbody>
     
+    </table>
 
      <% end %>
-  </p>
+ <p><h1>approved application</h1>  count = <%= @phases.where(:phase3 => true).count %> </p>
+<table>
+
+ <tbody>
+<% @phases.each do |phase| %>
+   <tr>
+   <% if phase.phase3 == true && phase.phase2 == true %>
+        <td><%= phase.name %></td>
+        <td><%= phase.unique_id %></td>
+        <td><%= phase.mobile_no %></td>
+        <td><%= phase.vichel_no %></td>
+        <td><%= phase.vehical_type %></td>
+        <!-- <td><%= link_to 'Show', phase %></td> -->
+       
+   <% end %>
+    </tr>
+   <% end %>
+    </tbody>
+   </table>
+
+
+<h1> search box</h1>
+<%= form_tag(search_page_path, :method => "get",   
+    class: 'navbar-form navbar-left') do %>  
+  <div class="input-group">  
+    <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>  
+    <div class="input-group-btn">  
+      <%= button_tag "", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>  
+    </div>  
+  </div>  
+<% end %>
+
+
+
+
 
 <% if current_user %>
     <%= link_to "signout" , destroy_user_session_path ,method:     :delete  %>
